--- a/profile.css
+++ b/profile.css
@@ -180,6 +180,7 @@ section{
 .heading{
     font-size: 5rem;
     text-align: center;
+    color: blue;
 }
 
 .about-img{
@@ -222,3 +223,65 @@ section{
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 }
+
+.education{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: auto;
+    
+    padding-bottom: 5rem;
+}
+.education .education-row{
+    display: flex;
+    padding-top: 3rem;
+    
+    font-size: 1.3rem;
+    line-height: 150%;
+    gap: 5rem;
+}
+.education-row .education-column{
+    flex:  1 1 40rem;
+}
+.education-column .title{
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem 2rem;
+}
+
+.education-column .education-box{
+    border-left: .2rem  solid blue;
+    
+}
+
+.education-box .education-content{
+    position: relative;
+    padding-left: 2rem;
+}
+.education-box .education-content::before{
+    content: '';
+    position: absolute;
+    left: -1.1rem;
+    width: 2rem;
+    height: 2rem;
+    background: blue;  
+    border-radius: 50%;
+}
+
+.education-content .content{
+    position: relative;
+    padding:1.5rem;
+    border: .2rem solid blue;
+    border-radius: .6rem;
+    margin-bottom: 2rem;
+}
+.education-content .content .year i{
+    color: blue;
+}
+.clock {
+    font-family: Arial, sans-serif;
+    font-size: 2em;
+    padding: 20px;
+    
+    border-radius: 10px;
+  }
